crates/nexus-store/tests/compile_fail/builder_skip_version.rs
use nexus::StreamId;
use nexus_store::pending_envelope;

fn main() {
    let _ = pending_envelope(StreamId::from_persisted("s1").unwrap()).event_type("E");
}
